Bug 392248 - Text tool makes Krita freeze
Summary: Text tool makes Krita freeze
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 4.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-23 22:07 UTC by micamurphy42
Modified: 2018-04-03 11:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description micamurphy42 2018-03-23 22:07:53 UTC
After I opened the text editor I wanted to move the text I just wrote, before closing the editor window. But when I used the translation tool it made the program freeze. I had this problem multiple times in a row.
Comment 1 Scott Petrovic 2018-03-25 17:04:03 UTC
Can you be more specific. There is no "translation tool" in Krita. 

When you say "freeze", do you mean it doesn't do anything, or does it crash? Try to give specific steps on what you are doing and what you expect to happen
Comment 2 micamurphy42 2018-03-25 17:10:12 UTC
The program is not responding, one time it was not responding in the windows task manager but the other times it was not event eating too much memory or what. I could just not click on anything and had to kill the process.
I wanted to edit the text size and move it without closing the text editor but I had to do so to prevent the freeze.
Comment 3 Halla Rempt 2018-03-28 13:01:09 UTC
Git commit ee806c8304125f7a88a04ecd6058cf41932090be by Boudewijn Rempt.
Committed on 28/03/2018 at 13:00.
Pushed by rempt into branch 'master'.

Make the text editor window application modal.

You should not even be able to select tools or do anything with any
object on the canvas while the text editor window is open. However,
that only works if the editor window has a parent, and it cannot have a
parent, because it has a menubar, so if it would have a parent, it would
crash on macOS. Setting it to ApplicationModal would make it block all
windows...

Still, that's better than allowing users to select other tools while
the window is active.

M  +1    -1    plugins/tools/svgtexttool/SvgTextTool.cpp

https://commits.kde.org/krita/ee806c8304125f7a88a04ecd6058cf41932090be
Comment 4 Halla Rempt 2018-04-03 11:45:48 UTC
Git commit 55fc8f6586ce04c645472b4fe6d144e3dcdd5c68 by Boudewijn Rempt.
Committed on 03/04/2018 at 11:18.
Pushed by rempt into branch 'krita/4.0'.

Make the text editor window application modal.

You should not even be able to select tools or do anything with any
object on the canvas while the text editor window is open. However,
that only works if the editor window has a parent, and it cannot have a
parent, because it has a menubar, so if it would have a parent, it would
crash on macOS. Setting it to ApplicationModal would make it block all
windows...

Still, that's better than allowing users to select other tools while
the window is active.
(cherry picked from commit ee806c8304125f7a88a04ecd6058cf41932090be)

M  +1    -1    plugins/tools/svgtexttool/SvgTextTool.cpp

https://commits.kde.org/krita/55fc8f6586ce04c645472b4fe6d144e3dcdd5c68